--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -14,7 +14,8 @@
             <li style="color: darkred"><strong>Durometer - вимірює твердість знань</strong></li>
         </ul>
         <ul>
-            <li><a href="/check/open_list">Check</a></li>
+            <li><a href="/check/open_list">Tests</a></li>
+            <li><a href="/solving">Problems</a></li>
             <li><a href="/logout">Bye</a></li>
         </ul>
         </nav>
