--- a/app/templates/solving/list.html
+++ b/app/templates/solving/list.html
@@ -10,7 +10,7 @@
     <article>
       <header>
         <h4>
-          {{ pset.title }}
+          Задачник {{ pset.title }}
           <small>(закриється через {{d}} днів {{h}} годин {{m}} хвилин)</small>
         </h4>
       </header>
