--- a/app/templates/login/login.html
+++ b/app/templates/login/login.html
@@ -3,7 +3,7 @@
 {% block title %}{% endblock %}
 
 {% block content %}
-    <form method="post" action="{{ url_for('login') }}">
+    <form method="post">
       
       <label for="username">
         Username
