--- a/app/templates/login/pass.html
+++ b/app/templates/login/pass.html
@@ -7,8 +7,7 @@
       
       <label for="newpassword">
         New Password
-        <input type="test" name="password"
-               placeholder="Enter your new password" required>
+        <input name="password" placeholder="Enter your new password" required>
       </label>
 
       <footer class="grid">
