--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -1,3 +1,8 @@
+/* ------------------ pico size ------------- */
+html {
+  font-size: 100%;
+}
+
 /* однакова висота кнопок схвалення і відмови на формах */
 footer.grid button,
 footer.grid a[role="button"] {
