--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -23,7 +23,7 @@
             <li><a href="/check/open_list">Тести</a></li>
             <li><a href="/solving">Задачі</a></li>
             <li><a href="/pass">Пароль</a></li>
-            <li><a href="/logout">Вихід</a></li>
+            <li><a href="/login/logout">Вихід</a></li>
         </ul>
         </nav>
 
