--- a/app/templates/login/pass.html
+++ b/app/templates/login/pass.html
@@ -11,7 +11,7 @@
       </label>
 
       <footer class="grid">
-        <button type="submit">Змінити</button>
+        <button type="submit">OK</button>
         <a href="/check/open_list" role="button" class="secondary">Cancel</a>
       </footer> 
 
