--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -20,6 +20,7 @@
             <li style="color: darkred"><strong>Все найкраще - студентам</strong></li>
         </ul>
         <ul>
+            <li><a href="/disc/list">Лекції</a></li>
             <li><a href="/check/open_list">Тести</a></li>
             <li><a href="/solving">Задачі</a></li>
             <li><a href="/pass">Пароль</a></li>
