--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -35,9 +35,10 @@
     <script>
         const solving = document.getElementById("solving");
         solving.href = location.origin.replace("7004","7001/solving")
-
+                                      .replace("7074","7071/solving")
         const check = document.getElementById("check");
-        check.href = location.origin.replace("7004","7002/check/open_list")  
+        check.href = location.origin.replace("7004","7002/check/open_list")
+                                    .replace("7074","7072/check/open_list")
     </script>
     {% endblock %}
 </body>
